Fix profile image on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 img.profile {
-	max-width: 500px;
+	width: 500px;
+	max-width: 80%;
 	border-radius: 50%;
 }
